# Sparklet

./: .gitignore  .neoconf.json  Cargo.toml  Dockerfile  README.md  SECURITY.md  _setup.js  app.ts  classes.ts  consts.ts  db.js  db.ts  docker-compose.yml  emailverification.ts  errors.js  feutils.ts  index.js  nodemon.json  package-lock.json  package.json  paths.ts  playwright.config.ts  quiz-utils.ts  replit  replit.nix  run  statements.ts  tea-capes.json  test.js  tsconfig.json  tsconfig.webpack.json  util.ts  vite.config.js  vite.config.ts  webpack.config.cjs  webpack.config.js
db/: db.sqlite3  db.sqlite3-shm  db.sqlite3-wal
frontend/: .eslintrc.js  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
middleware/: accounts.ts  csp-nonce.ts  express.d.ts  helmet-csp.ts  paths.ts
routes/: adminCpl.ts  all.ts  api.ts  rooms.ts  scrapegoat.ts  sh.ts  wk.ts
sparkletz/: README.md  package.json
src/: answers.txt  api.rs  main.rs  templates.rs  words.txt
templates/: 404.html  about.html  hello.html  hello.stpl  home.html  host-room.html  pets-info.html  profile.html  quizplay.html  topbar.html
tests/: home.spec.ts
views/: 404.ejs  about.ejs  aboutjess.ejs  admin-cpl.ejs  article.ejs  capsules.ejs  catalog.ejs  hackathon-wordle.ejs  home.ejs  host-room.ejs  jess.ejs  jesslogin.ejs  justchat.ejs  login.ejs  main.ejs  news.ejs  pets-info.ejs  portfolio.ejs  profile.ejs  quiz.ejs  quizplay.ejs  stratus.ejs  sussy.ejs
vue-app/: .prettierrc  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+151 files in other folders)
