[package]
name = "sparklet"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.9.0"
actix-web = "4.3.1"
sailfish = "0.8.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
